implemented base functionality for crud operations

--- a/BlogMaster/BlogMaster.csproj
+++ b/BlogMaster/BlogMaster.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <ProjectReference Include="..\BlogMaster.Client\BlogMaster.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.10" />
   </ItemGroup>
 
 </Project>
