--- a/BlogMaster.Client/BlogMaster.Client.csproj
+++ b/BlogMaster.Client/BlogMaster.Client.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <NoDefaultLaunchSettingsFile>true</NoDefaultLaunchSettingsFile>
     <StaticWebAssetProjectMode>Default</StaticWebAssetProjectMode>
+    <BlazorWebAssemblyEnableLinker>true</BlazorWebAssemblyEnableLinker>
   </PropertyGroup>
 
   <ItemGroup>
