--- a/BlogMaster/BlogMaster.csproj
+++ b/BlogMaster/BlogMaster.csproj
@@ -1,11 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+	  <TargetFramework>net8.0</TargetFramework>
+	  <ImplicitUsings>enable</ImplicitUsings>
+	  <Nullable>enable</Nullable>
+	  <PlatformTarget>x86</PlatformTarget>
+	  <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
+		<Optimize>true</Optimize>
+		<DebugType>pdbonly</DebugType>
+		<PublishReadyToRun>true</PublishReadyToRun>
+	</PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BlogMaster.Client\BlogMaster.Client.csproj" />
