--- a/BlogMaster/BlogMaster.csproj
+++ b/BlogMaster/BlogMaster.csproj
@@ -5,7 +5,7 @@
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <Nullable>enable</Nullable>
 	  <PlatformTarget>x86</PlatformTarget>
-	  <Prefer32Bit>true</Prefer32Bit>
+	  <RuntimeIdentifier>win-x86</RuntimeIdentifier>
   </PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
