--- a/BlogMaster.Shared/BlogMaster.Shared.csproj
+++ b/BlogMaster.Shared/BlogMaster.Shared.csproj
@@ -1,11 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
 	  <TargetFramework>net8.0</TargetFramework>
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <Nullable>enable</Nullable>
-	  <PlatformTarget>x86</PlatformTarget>
-	  <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)' == 'Release'">
